test/error/unterminated_cond2.true
File 0, line 3, col 1 - 5:
unterminated conditional "elif"
